# BANTWORKS-UNITY-MCP

./: .gitignore  BUILD_TAURI.md  README.md  package-lock.json  package.json  setup.bat  setup.ps1
launcher/src/: app.js  index.html  styles.css
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/capabilities/: default.json
launcher/src-tauri/src/: main.rs
src/: index.ts
src/lib/: config.ts  http-server.ts
src/prompts/: index.ts
src/resources/: banter-components.ts  banter-js-api.ts  banter-vs-nodes.ts  index.ts  unity-types.ts  vs-graph-instructions.ts
src/tools/: check-import-status.ts  generate-vs-graph.ts  index.ts  query-project.ts  validate-vs-graph.ts  write-vs-graph.ts  write-webroot-js.ts
unity-extension/Editor/: BanterMCPBridge.cs
